# kiro_handover_execution

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: handover_params.yaml
docker/: Docker-Install.md  Dockerfile  run_kiro_hri_exec.bash  setup_hri_exec.sh
docs/: 01_arise_context.md  02_interfaces.md  03_installation.md  04_ros_configuration.md  05_basic_demo_how_to_use.md  06_role_in_demonstrator.md
examples/: Gazebo-Simulation.md
include/kiro_handover_execution/: Ur10eCollisionModel.hpp  arc_planner.hpp  bezier_arcs.hpp  feasibility.hpp  path_visualizer.hpp  point_cloud_observer.hpp  workspace_checker.hpp
src/: Ur10eCollisionModel.cpp  arc_planner.cpp  bezier_arcs.cpp  feasibility.cpp  handover_execution.cpp  path_visualizer.cpp  point_cloud_observer.cpp  workspace_checker.cpp
