<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kiro_handover_execution</name>
  <version>0.0.0</version>
  <description>
    An execution orchestrator for the ARISE KIRO handover pipeline. 
    Communicates with MoveIt2 and TRAC-IK to plan and execute 
    collision-free trajectories for UR10e robots. Features iterative 
    feasibility checks, orientation-constrained planning, and Octomap-based 
    obstacle avoidance for safe Human-Robot Interaction.
  </description>
  <maintainer email="nikolas.lappas.2003@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>kiro_handover_interfaces</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
